# xleaflet

./: .appveyor.yml  .gitignore  .travis.yml  .travis.yml.orig  CMakeLists.txt  LICENSE  README.md  environment-dev.yml  environment.yml  readthedocs.yml  xleafletConfig.cmake.in
.azure-pipelines/: unix-build.yml
.github/workflows/: main.yml
docs/: Doxyfile  environment.yml
docs/source/: api_reference.rst  conf.py  index.rst  installation.rst  releasing.rst  usage.rst
docs/source/api_reference/: circle.rst  circle_marker.rst  draw_control.rst  fullscreen_control.rst  geo_json.rst  heatmap.rst  icon.rst  image_video_overlay.rst  layer_group.rst  layers_control.rst  map.rst  marker.rst  marker_cluster.rst  measure_control.rst  polygon.rst  popup.rst  rectangle.rst  split_map_control.rst  tile_layer.rst  velocity.rst  widget_control.rst  wms_layer.rst
docs/source/api_reference/embed_widgets/: draw_control.html  draw_control.ipynb  icon.html  icon.ipynb  image_video_overlay.html  image_video_overlay.ipynb  layers_control.html  layers_control.ipynb  map.html  map.ipynb  marker.html  marker.ipynb  measure_control.html  popup.html  popup.ipynb  split_map_control.html  split_map_control.ipynb  tile_layer.html  tile_layer.ipynb  widget_control.html  wms_layer.html  wms_layer.ipynb
docs/source/embed_widgets/: index_example.html  index_example.ipynb
include/xleaflet/: test_xleaflet.hpp  xbasemaps.hpp  xcircle.hpp  xcircle_marker.hpp  xcontrol.hpp  xdraw_control.hpp  xfeature_group.hpp  xfullscreen_control.hpp  xgeo_json.hpp  xget_basemaps_path.hpp.in  xheatmap.hpp  xicon.hpp  ximage_overlay.hpp  xlayer.hpp  xlayer_group.hpp  xlayers_control.hpp  xleaflet_config.hpp  xleaflet_config_cling.hpp.in  xmap.hpp  xmarker.hpp  xmarker_cluster.hpp  xmeasure_control.hpp  xpath.hpp  xpolygon.hpp  xpolyline.hpp  xpopup.hpp  xraster_layer.hpp  xrectangle.hpp  xsplit_map_control.hpp  xtile_layer.hpp  xui_layer.hpp  xvector_layer.hpp  xvelocity.hpp  xvideo_overlay.hpp  xwidget_control.hpp  xwms_layer.hpp  xzoom_control.hpp
notebooks/: DrawControl.ipynb  FullScreenControl.ipynb  GeoJSON.ipynb  Geometry.ipynb  Heatmap.ipynb  LayerGroup.ipynb  LayersControl.ipynb  Leaflet.ipynb  MeasureControl.ipynb  Popup.ipynb  SplitMap.ipynb  Velocity.ipynb  Video.ipynb  WMSLayer.ipynb  WidgetControl.ipynb  velocity_data.json  xleaflet.ipynb  xleaflet_draw_control.ipynb  xleaflet_geo_json.ipynb  xleaflet_geometry.ipynb  xleaflet_heatmap.ipynb  xleaflet_layer_group.ipynb  xleaflet_layers_control.ipynb  xleaflet_measure_control.ipynb  xleaflet_popup.ipynb  xleaflet_split_map_control.ipynb  xleaflet_velocity.ipynb  xleaflet_video_overlay.ipynb  xleaflet_wms_layer.ipynb
share/xleaflet/: basemaps.json
src/: xcircle.cpp  xcircle_marker.cpp  xcontrol.cpp  xdraw_control.cpp  xfeature_group.cpp  xfullscreen_control.cpp  xgeo_json.cpp  xheatmap.cpp  xicon.cpp  ximage_overlay.cpp  xlayer.cpp  xlayer_group.cpp  xlayers_control.cpp  xleaflet.cpp  xmap.cpp  xmarker.cpp  xmarker_cluster.cpp  xmeasure_control.cpp  xpath.cpp  xpolygon.cpp  xpolyline.cpp  xpopup.cpp  xraster_layer.cpp  xrectangle.cpp  xsplit_map_control.cpp  xtile_layer.cpp  xui_layer.cpp  xvector_layer.cpp  xvelocity.cpp  xvideo_overlay.cpp  xwidget_control.cpp  xwms_layer.cpp  xzoom_control.cpp
test/: CMakeLists.txt  check_attributes.hpp  copyGTest.cmake.in  downloadGTest.cmake.in  main.cpp  test_xleaflet.cpp  test_xmap.cpp
